# MenTest

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  INITIAL.md  Makefile  PLANNING.md  README.md  TASK.md  docker-compose.yml  mypy.ini  packages.txt  pyproject.toml  pytest.ini  requirements.txt
.claude/commands/: execute-prp.md  generate-planinng.md  generate-prp.md  generate-task.md  manage-task.md
.cursor/rules/: product-requirements-prompts.mdc  project-rule.mdc  system-instruction.mdc
.devcontainer/: devcontainer.json
.gemini/commands/: load-planning.md  manage-task.md
PRPs/: mentest_feature.md
app/: main.py
app/core/scripts/: browser_use_example.py  debug_gif.py
app/pages/: 1_👋_Console.py
examples/explore_browser_use/: auth.json  base.py  browser_settings.py  human_in_the_loop.py  initial_actions.py  planner.py  sensitive_data.py
examples/prompts/: app_doc_generator.md  browser_execution_agent.md  explore_mode.md  explorer_agent.md  gherkin_agent.md  manual_test_case_agent.md  planner_agent.md  route_classifier.md  system_prompt.md  user_story_enhancement_agent.md
mentest/: main.py
mentest/api/: main.py
mentest/api/endpoints/: project.py  (+1 more)
mentest/app/: Mentest.py
mentest/core/: browser_executor.py  config.py  models.py
mentest/prompts/: app_doc_generator.md  browser_execution_agent.md  code_gen_agent.md  explore_mode.md  explorer_agent.md  gherkin_agent.md  manual_test_case_agent.md  planner_agent.md  route_classifier.md  system_prompt.md  user_story_enhancement_agent.md
tests/core/: test_models.py
(+1 files in other folders)
