[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mentest"
version = "0.1.0"
description = "An AI-powered QA platform for web applications."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["mentest*"] 